fix: resolve mobile touch issue on social media links by adjusting z-index

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -704,12 +704,12 @@ main {
 
             .social-media {
 
-                   a {
-                color: inherit;
-                text-decoration: none;
-            }
+                a {
+                    color: inherit;
+                    text-decoration: none;
+                }
 
-                
+
                 display: flex;
                 gap: 1.5rem;
                 transition: all 0.3s ease-in-out;
@@ -744,7 +744,7 @@ main {
 
                 .github {
                     &:hover {
-                        color:yellow;
+                        color: yellow;
                         transform: scale(1.2);
 
                     }
@@ -1151,6 +1151,9 @@ main {
                 }
 
                 .social-media {
+                    position: relative;
+                    z-index: 10;
+
                     .instagram {
                         color: #962fbf;
 
